# vapoursynth-plugin

./: README.md  meson.build  meson_options.txt  plugin.cpp  plugin.h  version.h.in
.github/workflows/: build.yaml
banding/: cambifilter.c  internalfilters.h
banding/libvmaf/: Makefile  cambi.c  cambi.h  feature_collector.h  feature_extractor.h  mem.h  picture.h  ref.h  stdatomic.h  test_cambi.c
expr/: exprfilter.cpp  internalfilters.h  vslog.cpp
expr/kernel/: cpulevel.cpp
expr2/: exprfilter.cpp
expr2/reactor/: CPUID.cpp  CPUID.hpp  Intrinsics.hpp  LLVMJIT.cpp  LLVMReactor.cpp  Module.hpp  Nucleus.hpp  OptimalIntrinsics.cpp  OptimalIntrinsics.hpp  Reactor.cpp  Reactor.hpp  Traits.hpp  x86.hpp
ngx/: README.md  autodll.h  cuda.h  internalfilters.h  ngx.cc  ngx.h  ngximpl.cc
text/: filtershared.h  internalfilters.h  stringer.h  textfilter.cpp  tmplfilter.cpp
text/fmt/: core.h  format.h
text/inja/: inja.hpp
text/nlohmann/: json.hpp
vfx/: README.md  internalfilters.h  vfx.cc
vfx/nvvfx/src/: NVVideoEffectsProxy.cpp  nvCVImageProxy.cpp
